src/objects/SAM_Quote_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Maintainence_Applicable__c</fullName>
        <label>Maintenance Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Run_Cost_Year_1__c</fullName>
        <description>Report field</description>
        <label>Run Cost (€) (year +1)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Cost_Year_2__c</fullName>
        <description>Report Field</description>
        <label>Run Cost (€) (year +2)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Cost_for_Year_1__c</fullName>
        <description>Report Field</description>
        <label>Run Cost for Year+1</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Run_Cost_for_Year_2__c</fullName>
        <description>Report Field</description>
        <label>Run Cost for Year+2</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spend_In_Euros__c</fullName>
        <description>Report Field</description>
        <formula>fml_License_Cost__c +  fml_Maintainence_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spend In Euros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Maint__c</fullName>
        <formula>num_Quantity__c *  fml_Maintainence_Amount__c</formula>
        <label>Total Annual Maint (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dt_Contract_End_Date__c</fullName>
        <inlineHelpText>Enter the End Date of the Contract, if any</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_Contract_Start_Date__c</fullName>
        <inlineHelpText>Enter the Start Date of the Contract, if any</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fml_Applicable_Cross_Charge__c</fullName>
        <formula>IF(  ISPICKVAL(pkl_Charging_Type__c , &apos;Cross Charge Applicable (X)&apos;) ,  Total_Annual_Maint__c +  fml_Total_CAPEX__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicable Cross Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fml_DO_detail_validation__c</fullName>
        <formula>IF( AND(ISPICKVAL(  pkl_DO_PO_Details_Applicable__c , &apos;Yes&apos;),ISBLANK(txt_DO_Number__c)),true,false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DO detail validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fml_License_Cost__c</fullName>
        <formula>fml_List_Price__c * (1 - num_Discount_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Cost (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fml_List_Price__c</fullName>
        <formula>IF( ISPICKVAL( pkl_Currency_Type__c , &apos;EUR&apos;),( num_List_Price__c ),(IF(ISPICKVAL( pkl_Currency_Type__c , &apos;GBP&apos;),( num_List_Price__c/num_GBP_EUR__c ),(IF(ISPICKVAL( pkl_Currency_Type__c , &apos;USD&apos;),( num_List_Price__c/num_USD_EUR__c ),(0))))) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fml_Maintainence_Amount__c</fullName>
        <formula>IF(  ISPICKVAL(pkl_Maintainence_Type__c, &apos;Amount&apos;)  ,  (IF( ISPICKVAL( pkl_Currency_Type__c , &apos;EUR&apos;),( num_Maintainence_Cost__c ),(IF(ISPICKVAL( pkl_Currency_Type__c , &apos;GBP&apos;),( num_Maintainence_Cost__c/num_GBP_EUR__c ),(IF(ISPICKVAL( pkl_Currency_Type__c , &apos;USD&apos;),( num_Maintainence_Cost__c/num_USD_EUR__c ),(0))))) )) ,  ( num_Maintainence_Cost__c /100)*fml_License_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Cost (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fml_Run_Cost_Detail_Validation__c</fullName>
        <formula>IF( AND(ISPICKVAL( pkl_Run_Cost_Applicable__c , &apos;Yes&apos;), 
OR(  ISBLANK(txt_Run_Cost_in_Euros__c) , 
ISBLANK(txt_Project_Maintained_by__c),ISPICKVAL( pkl_Run_Cost_Start_Year__c , &apos;&apos;),
ISPICKVAL( pkl_Run_Cost_End_Year__c , &apos;&apos;),ISPICKVAL( pkl_Whether_SAM_will_pick_up_Run_Cost__c , &apos;&apos;), 
ISBLANK( txta_SAM_Comments__c ),ISBLANK(txt_Run_Cost_Publisher__c),ISBLANK(Run_Cost_Year_1__c),ISBLANK(Run_Cost_Year_2__c),ISPICKVAL(Run_Cost_for_Year_1__c,&apos;&apos;),ISPICKVAL(Run_Cost_for_Year_2__c,&apos;&apos;),ISPICKVAL(pkl_Whether_SAM_will_pick_up_Run_Cost__c,&apos;&apos;))),
true,
false )</formula>
        <label>Run Cost Detail Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fml_Software_Engagement_Type__c</fullName>
        <description>Report Field</description>
        <formula>text(pkl_Charging_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Engagement Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fml_Total_CAPEX__c</fullName>
        <formula>num_Quantity__c * fml_License_Cost__c</formula>
        <label>Total CAPEX (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>md_Request__c</fullName>
        <label>Request</label>
        <referenceTo>SAM_Request__c</referenceTo>
        <relationshipName>Quote_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>num_Discount_Percentage__c</fullName>
        <label>Discount (%)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>num_GBP_EUR__c</fullName>
        <description>To store conversion ratio from GBP to Euro</description>
        <label>GBP - EUR</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_List_Price__c</fullName>
        <inlineHelpText>Enter List Price of the product, no discounts included</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Maintainence_Cost__c</fullName>
        <label>Maintenance Cost / (%)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Maintainence_Percentage__c</fullName>
        <label>Maintenance (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>num_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Quotation_Number__c</fullName>
        <label>Serial Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_USD_EUR__c</fullName>
        <label>USD - EUR</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pkl_Build_Details_Applicable__c</fullName>
        <label>Build Details Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Charging_Type__c</fullName>
        <label>Charging Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cross Charge Applicable (X)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO/PO Applicable (O)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Purchased (I)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engage with Procurement (P)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Currency_Type__c</fullName>
        <inlineHelpText>Select the type of currency for List Price</inlineHelpText>
        <label>Currency Type</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_DO_PO_Details_Applicable__c</fullName>
        <label>DO/PO Details Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Discount_Applicable__c</fullName>
        <description>If this is Yes, then Discount(%) field is mandatory. Take care in formula which used discount(%).</description>
        <label>Discount Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Line_Status__c</fullName>
        <label>Line Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending with Procurement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Maintainence_Type__c</fullName>
        <inlineHelpText>if &quot;Maintenance Applicable&quot; is Yes. Select appropriate maintenance type</inlineHelpText>
        <label>Maintenance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Publisher__c</fullName>
        <label>Publisher</label>
        <picklist>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Product</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Quotation_Available__c</fullName>
        <inlineHelpText>Select &apos;Yes&apos; if quote for the product already exist</inlineHelpText>
        <label>Quotation Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Request_status__c</fullName>
        <label>Request status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Quote Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting CC details (Pending with ULEMP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC details provided (By ULEMP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Details Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Details Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting CC details (Pending with ULSMT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answer Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query Answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resume</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Run_Cost_Applicable__c</fullName>
        <label>Run Cost Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Run_Cost_End_Year__c</fullName>
        <label>Run Cost End Year</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Run_Cost_Start_Year__c</fullName>
        <label>Run Cost Start Year</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Whether_SAM_will_pick_up_Run_Cost__c</fullName>
        <label>Run cost picked up by</label>
        <picklist>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txt_DO_Number__c</fullName>
        <inlineHelpText>Enter the Delivery Order (DO) number</inlineHelpText>
        <label>DO Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Project_Maintained_by__c</fullName>
        <description>renamed from Project Maintained by(after PGLS exit)</description>
        <inlineHelpText>Enter the name/ team which maintains the project post PGLS exit</inlineHelpText>
        <label>Project Maintenance</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Publishers_Details__c</fullName>
        <description>Stores the publisher names for different  quotations including other product types.Should be used in Reports and concatenation into Request &gt; Publisher ( txt_CrossCharge_Publisher__c field )</description>
        <label>Other Publishers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Run_Cost_Publisher__c</fullName>
        <label>Publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Run_Cost_in_Euros__c</fullName>
        <inlineHelpText>Enter Run Cost in Euros</inlineHelpText>
        <label>Run Cost (€)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_Software_Name__c</fullName>
        <inlineHelpText>Enter the name of Software product required</inlineHelpText>
        <label>Software Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txta_DO_Notes__c</fullName>
        <label>DO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_SAM_Comments__c</fullName>
        <label>SAM Comments</label>
        <type>TextArea</type>
    </fields>
    <label>Quotation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Software Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotation Details</pluralLabel>
    <recordTypes>
        <fullName>SAM_Non_Proj_Quote_RO</fullName>
        <active>true</active>
        <description>Read Only Quotation layout for Non-Project quotations</description>
        <label>SAM Non Proj Quote RO</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAM_Non_Proj_Quote_RW</fullName>
        <active>true</active>
        <description>Read Write Quotation layout for Non-Project quotations</description>
        <label>SAM Non Proj Quote RW</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAM_Non_Proj_Quote_RW_RO</fullName>
        <active>true</active>
        <description>Read and Write Quotation layout for Non-Project quotations</description>
        <label>SAM Non Proj Quote RW/RO</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAM_Quote_RW</fullName>
        <active>true</active>
        <label>SAM Quote RW</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAM_Quote_RW_RO</fullName>
        <active>true</active>
        <label>SAM Quote RW_RO</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAM_Quote_Read_Only</fullName>
        <active>true</active>
        <label>SAM Quote Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Name_field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Name),TEXT( pkl_Request_status__c )&lt;&gt; $Label.SAM_Open ,TEXT( pkl_Request_status__c )&lt;&gt; $Label.SAM_In_Progress  ,TEXT( pkl_Request_status__c )&lt;&gt; $Label.SAM_Draft_Quote_Provided ,TEXT( pkl_Request_status__c )&lt;&gt; $Label.SAM_Quote_Rejected ,TEXT( pkl_Request_status__c )&lt;&gt; $Label.SAM_Information_Provided )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Publishers_Details_Mandatory</fullName>
        <active>true</active>
        <description>This is mandatory when Publisher is Other Products</description>
        <errorConditionFormula>AND(ISPICKVAL( pkl_Publisher__c , &apos;Other Product&apos;) ,
 ISBLANK(txt_Publishers_Details__c  ) )</errorConditionFormula>
        <errorDisplayField>txt_Publishers_Details__c</errorDisplayField>
        <errorMessage>Mandatory when Publisher is Other Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Publishers_Details_Reverse_Validation</fullName>
        <active>true</active>
        <description>User should not set this field when Publisher is not  &apos;Other Product&apos;</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL( pkl_Publisher__c , &apos;Other Product&apos;)) ,
 NOT(ISBLANK(txt_Publishers_Details__c  )) )</errorConditionFormula>
        <errorDisplayField>txt_Publishers_Details__c</errorDisplayField>
        <errorMessage>Cannot set when Publisher is Not &apos;Other Product&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quotation_as_Completed_without_attaching</fullName>
        <active>true</active>
        <description>cannot mark Quotation as Completed without attaching Quotation file name &quot;Quotation&quot;</description>
        <errorConditionFormula>AND( ISNEW(), ISPICKVAL( md_Request__r.pkl_Software_Purchase_Req__c , &apos;Yes&apos;)  , ISPICKVAL( pkl_Charging_Type__c , &apos;DO/PO Applicable (O)&apos;)  ,ISPICKVAL(pkl_Line_Status__c , &apos;Completed&apos;))</errorConditionFormula>
        <errorMessage>You cannot mark Quotation as Completed without attaching Quotation file name &quot;Quotation&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_CC_Charging_Type_Validation</fullName>
        <active>false</active>
        <description>For non-project request type, don’t allow user to select cross charge (x) option for charging type</description>
        <errorConditionFormula>AND(Text(pkl_Charging_Type__c)= $Label.SAM_Cross_Charge_Applicable ,
 md_Request__r.txt_Request_Type__c  = &apos;SAM_RW_Non_Project_Request&apos;)</errorConditionFormula>
        <errorDisplayField>pkl_Charging_Type__c</errorDisplayField>
        <errorMessage>Cross Charge Applicable (X) charging type not applicable for Non-Project requests</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_DOPO_applicable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(pkl_Charging_Type__c, &apos;DO/PO Applicable (O)&apos;),ISPICKVAL(pkl_Charging_Type__c, &apos;Innovation Purchased (I)&apos;),ISPICKVAL(pkl_Charging_Type__c, &apos;Engage with Procurement (P)&apos;)) ,md_Request__r.txt_Request_Type__c = &apos;SAM_RW_Project_Request&apos;, ISPICKVAL(pkl_DO_PO_Details_Applicable__c,&apos;No&apos;) )</errorConditionFormula>
        <errorDisplayField>pkl_DO_PO_Details_Applicable__c</errorDisplayField>
        <errorMessage>DO/PO details are Applicable on this charging type, Please select &quot;Yes&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_DO_Number_Alpha</fullName>
        <active>true</active>
        <errorConditionFormula>AND(( NOT( ISBLANK(  txt_DO_Number__c ) ) ),(NOT( REGEX( txt_DO_Number__c , &quot;[a-zA-Z0-9 ]+&quot;))))</errorConditionFormula>
        <errorDisplayField>txt_DO_Number__c</errorDisplayField>
        <errorMessage>&quot;Invalid Data&quot;, Please Enter Alphabets/Numeric values only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_DO_Reverse_Validation</fullName>
        <active>true</active>
        <description>Don&apos;t allow DO fields to enter if DO applicable is No.</description>
        <errorConditionFormula>AND( OR(ISPICKVAL(pkl_DO_PO_Details_Applicable__c,&apos;No&apos;),ISPICKVAL(pkl_DO_PO_Details_Applicable__c,&apos;&apos;)), OR(NOT(ISBLANK( txt_DO_Number__c )),NOT(ISBLANK(  txta_DO_Notes__c ))))</errorConditionFormula>
        <errorMessage>DO detail fields are mandatory only if DO details Applicable is Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_Dis_Percentage_shd_be_positive</fullName>
        <active>true</active>
        <description>Discount percentage should be +ve</description>
        <errorConditionFormula>num_Discount_Percentage__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>num_Discount_Percentage__c</errorDisplayField>
        <errorMessage>&quot;Invalid Data&quot;, Please Enter Positive numbers only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_Discount_Percentage</fullName>
        <active>true</active>
        <description>Mandatory when discount percentage is applicable.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL( pkl_Discount_Applicable__c , &apos;Yes&apos;), ISBLANK(  num_Discount_Percentage__c )),true,false )</errorConditionFormula>
        <errorDisplayField>num_Discount_Percentage__c</errorDisplayField>
        <errorMessage>Mandatory when discount percentage is applicable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_Discount_Percentage_reverse</fullName>
        <active>true</active>
        <description>Value require only when discount percentage is applicable.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL( pkl_Discount_Applicable__c , &apos;No&apos;),Not(ISBLANK(  num_Discount_Percentage__c ) )),true,false )</errorConditionFormula>
        <errorDisplayField>num_Discount_Percentage__c</errorDisplayField>
        <errorMessage>Value require only when discount percentage is applicable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAM_End_date_greater_than_Start_Date</fullName>
        <active>true</active>
        <description>Start Date should be less than End Date</description>
        <errorConditionFormula>dt_Contract_Start_Date__c &gt; dt_Contract_End_Date__c</errorConditionFormula>
        <errorMessage>Contract Start Date should be less than Contract End Date OR Contract End Date should be greater than Contract Start Date</errorMessage>
    </validationRules>
</CustomObject>